--- a/SKUtils/Flows/Custom Modal Navigation/View/ModalNavigationViewController.xib
+++ b/SKUtils/Flows/Custom Modal Navigation/View/ModalNavigationViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ModalNavigationViewController">
             <connections>
+                <outlet property="textInputsManager" destination="Bau-ga-xvU" id="JSg-Lg-jA3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,19 +21,60 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pqb-FF-85z">
-                    <rect key="frame" x="160.5" y="328.5" width="54" height="30"/>
-                    <state key="normal" title="Dismiss"/>
+                    <rect key="frame" x="20" y="617" width="335" height="50"/>
+                    <color key="backgroundColor" red="0.4941176471" green="0.82745098039999998" blue="0.12941176469999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" priority="999" constant="50" id="MtE-Lc-SLw"/>
+                    </constraints>
+                    <state key="normal" title="Dismiss">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
                     <connections>
                         <action selector="dismissButtonPressed:" destination="-1" eventType="touchUpInside" id="4zO-h4-eZg"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LabelLabel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2De-sj-Rne">
+                    <rect key="frame" x="20" y="20" width="335" height="527"/>
+                    <color key="backgroundColor" red="0.17254901959999999" green="0.63529411759999999" blue="0.7843137255" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BhV-OB-3Wj">
+                    <rect key="frame" x="20" y="567" width="335" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="kuf-B3-de1"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="trailing" secondItem="pqb-FF-85z" secondAttribute="trailing" constant="20" id="5Zm-pT-wwd"/>
+                <constraint firstItem="pqb-FF-85z" firstAttribute="leading" secondItem="fwJ-ZV-ZKT" secondAttribute="leading" constant="20" id="6HM-V4-N9J"/>
+                <constraint firstItem="BhV-OB-3Wj" firstAttribute="leading" secondItem="fwJ-ZV-ZKT" secondAttribute="leading" constant="20" id="Dvj-Du-jzO"/>
                 <constraint firstItem="pqb-FF-85z" firstAttribute="centerX" secondItem="fwJ-ZV-ZKT" secondAttribute="centerX" id="Exx-f0-XhJ"/>
-                <constraint firstItem="pqb-FF-85z" firstAttribute="centerY" secondItem="fwJ-ZV-ZKT" secondAttribute="centerY" id="gU4-O7-po8"/>
+                <constraint firstItem="pqb-FF-85z" firstAttribute="top" secondItem="BhV-OB-3Wj" secondAttribute="bottom" constant="20" id="Qkj-SC-ogo"/>
+                <constraint firstItem="2De-sj-Rne" firstAttribute="top" secondItem="fwJ-ZV-ZKT" secondAttribute="top" id="SdG-Z1-IvQ"/>
+                <constraint firstItem="BhV-OB-3Wj" firstAttribute="top" secondItem="2De-sj-Rne" secondAttribute="bottom" constant="20" id="caN-L9-UfU"/>
+                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="bottom" secondItem="pqb-FF-85z" secondAttribute="bottom" id="epw-XG-1PA"/>
+                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="trailing" secondItem="BhV-OB-3Wj" secondAttribute="trailing" constant="20" id="jyl-41-Uo8"/>
+                <constraint firstItem="2De-sj-Rne" firstAttribute="leading" secondItem="fwJ-ZV-ZKT" secondAttribute="leading" constant="20" id="mys-Kq-EoT"/>
+                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="trailing" secondItem="2De-sj-Rne" secondAttribute="trailing" constant="20" id="xKS-4V-hQt"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fwJ-ZV-ZKT"/>
         </view>
+        <customObject id="Bau-ga-xvU" customClass="TextInputsManager" customModule="SKTextInputsManager">
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="boolean" keyPath="handleReturnKeyType" value="NO"/>
+                <userDefinedRuntimeAttribute type="boolean" keyPath="hideOnTap" value="YES"/>
+                <userDefinedRuntimeAttribute type="boolean" keyPath="nextBecomesFirstResponder" value="YES"/>
+            </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="containerView" destination="i5M-Pr-FkT" id="jc6-lh-kup"/>
+            </connections>
+        </customObject>
     </objects>
 </document>
