--- a/SKUtils/Flows/Custom Modal Navigation/View/ModalNavigationViewController.xib
+++ b/SKUtils/Flows/Custom Modal Navigation/View/ModalNavigationViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ModalNavigationViewController">
             <connections>
+                <outlet property="label" destination="2De-sj-Rne" id="ueU-tn-vPz"/>
                 <outlet property="textInputsManager" destination="Bau-ga-xvU" id="JSg-Lg-jA3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
