--- a/SKUtils/Misc/Image Previewing/View/Cell/ImagePreviewCell.xib
+++ b/SKUtils/Misc/Image Previewing/View/Cell/ImagePreviewCell.xib
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,11 +25,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="213" height="169"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3VO-Ec-BQw">
-                                <rect key="frame" x="0.0" y="0.0" width="213" height="213"/>
+                                <rect key="frame" x="0.0" y="0.0" width="213" height="169"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="3VO-Ec-BQw" secondAttribute="height" multiplier="1:1" placeholder="YES" id="yGk-j4-jXG"/>
-                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -50,10 +46,10 @@
             <constraints>
                 <constraint firstItem="NuQ-sJ-Ebq" firstAttribute="leading" secondItem="FXL-qR-LE6" secondAttribute="leading" id="1gU-u4-3lo"/>
                 <constraint firstItem="DON-AU-z15" firstAttribute="centerY" secondItem="crx-bR-Kd3" secondAttribute="centerY" id="Atr-PR-hbw"/>
+                <constraint firstItem="3VO-Ec-BQw" firstAttribute="width" secondItem="FXL-qR-LE6" secondAttribute="width" id="K8U-sr-Dcd"/>
                 <constraint firstAttribute="trailing" secondItem="NuQ-sJ-Ebq" secondAttribute="trailing" id="Szo-VG-VO9"/>
                 <constraint firstItem="NuQ-sJ-Ebq" firstAttribute="top" secondItem="FXL-qR-LE6" secondAttribute="top" id="Trj-bp-2bT"/>
-                <constraint firstItem="3VO-Ec-BQw" firstAttribute="width" secondItem="FXL-qR-LE6" secondAttribute="width" priority="750" id="a4C-Xq-qme"/>
-                <constraint firstItem="3VO-Ec-BQw" firstAttribute="height" secondItem="FXL-qR-LE6" secondAttribute="height" priority="250" id="eKt-7f-LWq"/>
+                <constraint firstItem="3VO-Ec-BQw" firstAttribute="height" secondItem="FXL-qR-LE6" secondAttribute="height" id="ebV-n5-jOf"/>
                 <constraint firstItem="DON-AU-z15" firstAttribute="centerX" secondItem="crx-bR-Kd3" secondAttribute="centerX" id="ocr-b5-dH5"/>
                 <constraint firstAttribute="bottom" secondItem="NuQ-sJ-Ebq" secondAttribute="bottom" id="ues-Fl-r7q"/>
             </constraints>
