--- a/SKUtils/Flows/Activity Viewable Example/View/ActivityViewableViewController.xib
+++ b/SKUtils/Flows/Activity Viewable Example/View/ActivityViewableViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -36,6 +36,7 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="bottom" secondItem="MY3-iI-sPO" secondAttribute="bottom" constant="20" id="4Xc-xe-R7b"/>
+                <constraint firstItem="MY3-iI-sPO" firstAttribute="centerX" secondItem="fwJ-ZV-ZKT" secondAttribute="centerX" id="9wu-2T-4xG"/>
                 <constraint firstItem="MY3-iI-sPO" firstAttribute="leading" secondItem="fwJ-ZV-ZKT" secondAttribute="leading" constant="20" id="MeE-mH-1cf"/>
                 <constraint firstItem="3n9-fC-qVj" firstAttribute="centerY" secondItem="fwJ-ZV-ZKT" secondAttribute="centerY" id="gAJ-km-a0q"/>
                 <constraint firstItem="3n9-fC-qVj" firstAttribute="centerX" secondItem="fwJ-ZV-ZKT" secondAttribute="centerX" id="h0R-rn-QUS"/>
