--- a/SKUtils/Flows/Alert Viewable Example/View/AlertViewableViewController.xib
+++ b/SKUtils/Flows/Alert Viewable Example/View/AlertViewableViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -39,6 +39,7 @@
                 <constraint firstItem="gqY-OK-Xi4" firstAttribute="centerY" secondItem="fwJ-ZV-ZKT" secondAttribute="centerY" id="IoC-xR-29J"/>
                 <constraint firstItem="gqY-OK-Xi4" firstAttribute="centerX" secondItem="fwJ-ZV-ZKT" secondAttribute="centerX" id="hcM-s3-IbS"/>
                 <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="bottom" secondItem="Qn9-ZW-Xg8" secondAttribute="bottom" constant="20" id="qCn-P8-2Xf"/>
+                <constraint firstItem="Qn9-ZW-Xg8" firstAttribute="centerX" secondItem="fwJ-ZV-ZKT" secondAttribute="centerX" id="sBg-r9-UFc"/>
                 <constraint firstItem="Qn9-ZW-Xg8" firstAttribute="leading" secondItem="fwJ-ZV-ZKT" secondAttribute="leading" constant="20" id="yjh-8K-Ms8"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fwJ-ZV-ZKT"/>
