--- a/SKUtils/Flows/Main Menu/View/MainMenuViewController.xib
+++ b/SKUtils/Flows/Main Menu/View/MainMenuViewController.xib
@@ -11,8 +11,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainMenuViewController">
             <connections>
-                <outlet property="button" destination="Xbm-8m-7rn" id="DGZ-Ux-gvQ"/>
-                <outlet property="label" destination="PtX-KH-zdG" id="Rq2-Bu-LWS"/>
                 <outlet property="tableView" destination="bME-jt-Rz1" id="VR6-uD-Cbt"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -23,45 +21,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bME-jt-Rz1">
-                    <rect key="frame" x="0.0" y="127" width="375" height="436"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="TcP-DQ-0Tr"/>
                     </connections>
                 </tableView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xbm-8m-7rn">
-                    <rect key="frame" x="137" y="607" width="100" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="100" id="2TW-f4-UmJ"/>
-                        <constraint firstAttribute="height" constant="30" id="zPE-rM-xpB"/>
-                    </constraints>
-                    <state key="normal" title="Button"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                            <real key="value" value="2"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                            <color key="value" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PtX-KH-zdG">
-                    <rect key="frame" x="20" y="50" width="42" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="bME-jt-Rz1" firstAttribute="top" secondItem="fwJ-ZV-ZKT" secondAttribute="top" constant="107" id="5kY-2J-6VP"/>
-                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="bottom" secondItem="Xbm-8m-7rn" secondAttribute="bottom" constant="30" id="9qZ-aE-JcZ"/>
+                <constraint firstItem="bME-jt-Rz1" firstAttribute="top" secondItem="fwJ-ZV-ZKT" secondAttribute="top" id="5kY-2J-6VP"/>
                 <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="trailing" secondItem="bME-jt-Rz1" secondAttribute="trailing" id="Epl-Hm-fvl"/>
-                <constraint firstItem="PtX-KH-zdG" firstAttribute="leading" secondItem="fwJ-ZV-ZKT" secondAttribute="leading" constant="20" id="kEn-jr-24p"/>
                 <constraint firstItem="bME-jt-Rz1" firstAttribute="leading" secondItem="fwJ-ZV-ZKT" secondAttribute="leading" id="m7I-Km-Mgk"/>
-                <constraint firstItem="Xbm-8m-7rn" firstAttribute="centerX" secondItem="fwJ-ZV-ZKT" secondAttribute="centerX" id="oAn-S0-Zcw"/>
-                <constraint firstItem="PtX-KH-zdG" firstAttribute="top" secondItem="fwJ-ZV-ZKT" secondAttribute="top" constant="30" id="uMS-ay-Qkc"/>
-                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="bottom" secondItem="bME-jt-Rz1" secondAttribute="bottom" constant="104" id="w0c-Kp-aQy"/>
+                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="bottom" secondItem="bME-jt-Rz1" secondAttribute="bottom" id="w0c-Kp-aQy"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fwJ-ZV-ZKT"/>
         </view>
